[gd_scene load_steps=3 format=3 uid="uid://bhh0v7x4fjsgi"]

[ext_resource type="Script" uid="uid://cvk2fqxhgn7qa" path="res://Scenes/ContentManager/Scripts/content_list.gd" id="1_ly1kh"]
[ext_resource type="PackedScene" uid="uid://cvr5g886g53be" path="res://Sounds/SFX/UI/UISFX.tscn" id="2_aaikl"]

[node name="ContentList" type="Control" node_paths=PackedStringArray("contentItems", "collapseButton", "pupup_ID", "popup_textedit", "to_mod_h_box_container", "mod_option_button")]
custom_minimum_size = Vector2(200, 30)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ly1kh")
contentItems = NodePath("Content/ContentItems")
collapseButton = NodePath("Content/HBoxContainer/CollapseButton")
pupup_ID = NodePath("ID_Input")
popup_textedit = NodePath("ID_Input/VBoxContainer/IdTextEdit")
to_mod_h_box_container = NodePath("ID_Input/VBoxContainer/ToModHBoxContainer")
mod_option_button = NodePath("ID_Input/VBoxContainer/ToModHBoxContainer/ModOptionButton")
search_line = NodePath("Content/SearchLine")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.00771605
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Content"]
layout_mode = 2

[node name="CollapseButton" type="Button" parent="Content/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Click to collapse"
text = "Items"

[node name="AddButton" type="Button" parent="Content/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
tooltip_text = "Add item"
theme_override_font_sizes/font_size = 16
text = "+"

[node name="DuplicateButton" type="Button" parent="Content/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
tooltip_text = "Duplicate item"
theme_override_font_sizes/font_size = 16
text = "D"

[node name="DeleteButton" type="Button" parent="Content/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
tooltip_text = "Delete item"
theme_override_font_sizes/font_size = 16
text = "-"

[node name="SearchLine" type="LineEdit" parent="Content"]
layout_mode = 2
placeholder_text = "Search..."

[node name="ContentItems" type="ItemList" parent="Content"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_vertical = 3
fixed_icon_size = Vector2i(32, 32)

[node name="ID_Input" type="Popup" parent="."]
title = "Input ID"
initial_position = 2
size = Vector2i(200, 152)
unresizable = false
borderless = false

[node name="VBoxContainer" type="VBoxContainer" parent="ID_Input"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IdLabel" type="Label" parent="ID_Input/VBoxContainer"]
layout_mode = 2
text = "Input an ID"

[node name="IdTextEdit" type="TextEdit" parent="ID_Input/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "ex: pistol_9mm"
scroll_fit_content_height = true

[node name="ToModHBoxContainer" type="HBoxContainer" parent="ID_Input/VBoxContainer"]
layout_mode = 2

[node name="ModLabel" type="Label" parent="ID_Input/VBoxContainer/ToModHBoxContainer"]
layout_mode = 2
text = "To mod:"

[node name="ModOptionButton" type="OptionButton" parent="ID_Input/VBoxContainer/ToModHBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ID_Input/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OK" type="Button" parent="ID_Input/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Ok"

[node name="Cancel" type="Button" parent="ID_Input/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Cancel"

[node name="Uisfx" parent="." instance=ExtResource("2_aaikl")]
root_path = NodePath("..")

[connection signal="button_up" from="Content/HBoxContainer/CollapseButton" to="." method="_on_collapse_button_button_up"]
[connection signal="button_up" from="Content/HBoxContainer/AddButton" to="." method="_on_add_button_button_up"]
[connection signal="button_up" from="Content/HBoxContainer/DuplicateButton" to="." method="_on_duplicate_button_button_up"]
[connection signal="button_up" from="Content/HBoxContainer/DeleteButton" to="." method="_on_delete_button_button_up"]
[connection signal="gui_input" from="Content/ContentItems" to="." method="_on_content_items_gui_input"]
[connection signal="item_activated" from="Content/ContentItems" to="." method="_on_content_items_item_activated"]
[connection signal="mouse_entered" from="Content/ContentItems" to="." method="_on_content_items_mouse_entered"]
[connection signal="button_up" from="ID_Input/VBoxContainer/HBoxContainer/OK" to="." method="_on_ok_button_up"]
[connection signal="button_up" from="ID_Input/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_up"]
